Fix build hang: leaked non-daemon heartbeat executors and starvation-sensitive control plane
Two defects caused mvn clean package to hang indefinitely after the
Phase5 job storm:

1. ProcessRuntimeAgent.executeJob created one non-daemon platform
   scheduled executor (pool-N-thread-1) per job for heartbeats, shut
   down only in the job thread's finally block. Any stalled job leaked
   a non-daemon thread that prevented JVM exit and re-dialed the leader
   every 5 seconds forever (the repeating HANDSHAKE START / HELLO SENT
   pattern with 5s read timeouts). Replaced with a single shared daemon
   heartbeat scheduler; per-job tasks are cancelled in finally and the
   scheduler is shut down in close(). cleanupExecutor is now daemon too.

2. Every critical long-lived loop ran on virtual threads: TcpServer
   accept loop, per-connection handshake handlers, PeerConnection
   receive loops, GossipProtocol, DiscoveryService maintenance,
   JobSupervisor scans, ResourceReporter, AntiEntropyManager and
   ChunkScrubber. When virtual-thread carriers were pinned/starved
   anywhere in the JVM, the responder side of every handshake died
   (seed listens but never accepts -> "Read timed out"), gossip and
   supervisor scans stopped, and scheduled executors could not
   terminate (executor.isTerminated=false). These loops are few and
   long-lived, so they now run on named platform daemon threads,
   making cluster formation and shutdown immune to virtual-thread
   scheduler starvation. Per-task work (message handlers, probes,
   job bodies) stays on virtual threads.